--- a/assets/www/detail.html
+++ b/assets/www/detail.html
@@ -31,8 +31,8 @@
     <script src="angular.js"></script>
     <script src="zepto.js"></script>
 
-    <script src="mock/mycomments.js"></script>
-    <script src="mock/strangercomments.js"></script>
+    <script src="mock/wodepingjia.js"></script>
+    <script src="mock/moshengrenpingjia.js"></script>
 </head>
 <body>
 <div id="wrapper" ng-app="commentsApp">
