--- a/assets/www/contacts.html
+++ b/assets/www/contacts.html
@@ -11,6 +11,9 @@
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <link rel="stylesheet" href="style/contacts.css" type="text/css">
+    <link rel="stylesheet" href="progress/progressjs.css" type="text/css">
+    <link rel="stylesheet" href="alert/alertify.core.css" type="text/css">
+    <link rel="stylesheet" href="alert/alertify.default.css" type="text/css">
     <style>
         body,html{
             padding: 0;
@@ -43,6 +46,9 @@
     <script src="zepto.js"></script>
     <script src="mock/lianxiren.js"></script>
 
+    <script src="progress/progress.js"></script>
+    <script src="alert/alertify.js"></script>
+
 </head>
 <body>
 <div id="wrapper" ng-app="phonecatApp" ng-controller="PhoneListCtrl" >
@@ -50,7 +56,7 @@
         <div class="c-comments hide">
             <textarea></textarea>
             <div class="c-range">
-                <input type="range">
+                <input type="range" value="10">
             </div>
             <div class="c-grade">
                 10
@@ -69,8 +75,14 @@
 <script>
 
     var phonecatApp = angular.module('phonecatApp', []);
-    var contacts = JSON.parse(Android.GetAllContacts()) || CTS;
-//    var contacts = PhoneContacts;
+
+    var contacts;
+    if(typeof window.Android == "undefined"){
+        contacts = PhoneContacts;
+    }
+    else{
+        contacts = JSON.parse(Android.GetAllContacts()) || CTS;
+    }
 
     phonecatApp.controller('PhoneListCtrl', function ($scope) {
         $scope.phones = contacts;
@@ -80,9 +92,24 @@
         }
     });
 
+    var pj = progressJs();
+
+    //确定.
     $(".c-confirm").on('click',function(){
+        var $comments = $(".c-comments");
+
         $(".c-comments textarea").val("");
-        $(".c-comments").addClass("hide");
+
+        pj.onbeforeend(function(){
+            alertify.success("评论成功",2000);
+        });
+
+        pj.start().autoIncrease(30, 500);
+
+        setTimeout(function () {
+            pj.end();
+            $comments.addClass("hide");
+        },2000)
     })
 
     $(".c-range input").on("change",function(){
