--- a/assets/www/allcontacts.html
+++ b/assets/www/allcontacts.html
@@ -43,7 +43,7 @@
     </style>
 
     <script src="angular.js"></script>
-    <script src=""></script>
+    <script src="Date/date.js"></script>
     <script src="mock/lianxiren.js"></script>
 
     <script src="progress/progress.js"></script>
@@ -127,34 +127,19 @@
 
     function postComment(callback){
 
+        var date = Date.today().toString('MMMM dS, yyyy');
+
         var item = {
-            phone: 13389892,
-            who: currTel.toString(),
+            phone: currTel.toString().match(/[0-9]+/)[0],
+            who: currTel.toString().match(/[0-9]+/)[0],
             rank: currRank,
-            comment: currComment
-        };
-
-
-//        $.ajax({
-//            method: 'GET',
-//            url: 'http://192.168.0.103:3000/all',
-//            data: {},
-//            dataType: 'jsonp',
-//            context: document.body,
-//            crossDomain: true,
-//            jsonp: "callback",
-//            success: function(data,textStatus,jqXHR){
-//                alertify.success(data);
-//            },
-//            error: function(jqXHR, textStatus,errorThrown){
-//                alertify.error(textStatus);
-//            }
-//        });
-
-
+            comment: currComment,
+            tick: date
+    };
 
         $.ajax({
-            url: 'http://192.168.0.103:3000/add',
+            url: 'http://10lines.cn:3000/add',
+//            url: 'http://localhost:3000/add',
             context: document.body,
             type: 'GET',
             data: item,
